--- a/main.html
+++ b/main.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Time and Space Complexity</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Time, Space, and Complexity</h1>
+
+    <p>Time Complexity is a critical concept in algorithm analysis. It describes how the runtime of an algorithm changes as the size of the input grows. Efficient algorithms are designed to minimize time complexity, ensuring that they perform well even with large datasets. The goal is to optimize the algorithm's runtime to be as fast as possible.</p>
+
+    <p>Space Complexity is another important concept that measures the amount of memory an algorithm uses relative to the input size. The notation O(n) is commonly used to describe space complexity, where 'n' represents the size of the input. <b>Space Complexity</b> helps us understand the efficiency of an algorithm in terms of memory usage.</p>
 
 </body>
-
 </html>
